Fix gap from panel border
A .container CSS class already exist, that have a max-width of 1000px, when panel
is larger, there's a gap. To solve, my .container class was renamed

--- a/src/css/image.css
+++ b/src/css/image.css
@@ -18,7 +18,7 @@
     display: flex;
 }
 
-.container {
+.main-container {
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
